Do not initialize lastlog database
This database is constructed as a sparse file, which Docker cannot
handle correctly. When the user ID is very large, the database appears
to be very large (many gigabytes), and cause Docker to hang and fail in
exporting layers because it will run out of disk space.

--- a/containers/base/Containerfile
+++ b/containers/base/Containerfile
@@ -102,6 +102,7 @@ ENV DEV_USER_SHELL=$DEV_USER_SHELL
 # Create non-root user
 RUN groupadd --gid $DEV_USER_GID $DEV_USER \
     && useradd \
+        --no-log-init \
         --uid $DEV_USER_UID \
         --gid $DEV_USER_GID \
         --comment "$DEV_USER_FULLNAME,,," \
