--- a/containers/base/Containerfile
+++ b/containers/base/Containerfile
@@ -89,6 +89,8 @@ RUN apt-get update \
         gcc \
         git \
         make \
+        python3 \
+        python3-pip \
     && rm -rf /var/lib/apt/lists/*
 
 # Non-root user variables
