--- a/containers/user/Containerfile
+++ b/containers/user/Containerfile
@@ -14,14 +14,14 @@ ARG OLD_DEV_USER=$DEV_USER
 ARG OLD_DEV_USER_UID=$DEV_USER_UID
 ARG OLD_DEV_USER_GID=$DEV_USER_GID
 ARG OLD_DEV_USER_FULLNAME=$DEV_USER_FULLNAME
-ARG OLD_DEV_USER_HOME=$DEV_USER_HOME
+ENV OLD_DEV_USER_HOME=$DEV_USER_HOME
 ARG OLD_DEV_USER_SHELL=$DEV_USER_SHELL
 
 # These variables should always be set by the script
 ARG CUSTOM_DEV_USER="user"
 ARG CUSTOM_DEV_USER_UID=2000
-ARG CUSTOM_DEV_USER_GID=2000
-ARG CUSTOM_DEV_USER_FULLNAME="Unknown User"
+ARG CUSTOM_DEV_USER_GID=$CUSTOM_DEV_USER_UID
+ARG CUSTOM_DEV_USER_FULLNAME=$CUSTOM_DEV_USER
 ARG CUSTOM_DEV_USER_HOME="/home/$CUSTOM_DEV_USER"
 ARG CUSTOM_DEV_USER_SHELL="/bin/bash"
 
@@ -54,8 +54,12 @@ RUN groupmod --new-name $DEV_USER \
         if [ $DEV_USER_UID -ne $OLD_DEV_USER_UID ]; then \
             mv /run/user/$OLD_DEV_USER_UID /run/user/$DEV_USER_UID; fi; \
         chown -R $DEV_USER_UID:$DEV_USER_GID $DEV_USER_HOME; \
-        chown -R $DEV_USER_UID:$DEV_USER_GID /run/user/$DEV_USER_UID; fi \
+        chown $DEV_USER_UID:$DEV_USER_GID /run/user/$DEV_USER_UID; fi \
     && sed -i "s;$OLD_DEV_USER;$DEV_USER;" /etc/sudoers
+
+# We cannot update PATH in the Dockerfile (it needs to be a straight assignment,
+# not using shell expansion, etc), so we must update PATH at runtime
+COPY fix_path.sh $ENTRYPOINT_DIR/02_fix_path.sh
 
 # Copy this script to fix ownership of volumes during runtime
 COPY fix_ownership.sh /fix_ownership.sh
