--- a/containers/base/Containerfile
+++ b/containers/base/Containerfile
@@ -91,6 +91,7 @@ RUN apt-get update \
         gcc \
         git \
         make \
+        python-is-python3 \
         python3 \
         python3-pip \
         shellcheck \
