--- a/containers/python/Containerfile
+++ b/containers/python/Containerfile
@@ -2,8 +2,8 @@
 
 # Copyright (c) 2024 Tim Perkins
 
-ARG BASE_CONTAINER
-FROM $BASE_CONTAINER
+ARG BASE_IMAGE="scratch"
+FROM $BASE_IMAGE
 
 # Ensure root user
 USER root
@@ -60,7 +60,3 @@ RUN poetry completions bash > $DEV_USER_HOME/.bashrc_poetry \
 # Switch to non-root user
 USER $DEV_USER
 WORKDIR $DEV_USER_HOME
-
-# Capture the MD5 sum used to ID the container
-ARG PYTHON_CONTAINER_MD5SUM
-ENV PYTHON_CONTAINER_MD5SUM=$PYTHON_CONTAINER_MD5SUM
