--- a/containers/xpra/Containerfile
+++ b/containers/xpra/Containerfile
@@ -2,8 +2,8 @@
 
 # Copyright (c) 2023 Tim Perkins
 
-ARG BASE_CONTAINER
-FROM $BASE_CONTAINER
+ARG BASE_IMAGE="scratch"
+FROM $BASE_IMAGE
 
 # Ensure root user
 USER root
@@ -32,7 +32,3 @@ RUN apt-get update \
 # Switch to non-root user
 USER $DEV_USER
 WORKDIR $DEV_USER_HOME
-
-# Capture the MD5 sum used to ID the container
-ARG XPRA_CONTAINER_MD5SUM
-ENV XPRA_CONTAINER_MD5SUM=$XPRA_CONTAINER_MD5SUM
