--- a/containers/emacs/Containerfile
+++ b/containers/emacs/Containerfile
@@ -3,6 +3,17 @@
 # Copyright (c) 2023 Tim Perkins
 
 ARG BASE_IMAGE="scratch"
+ARG DOOM_CACHE_IMAGE="scratch"
+FROM $DOOM_CACHE_IMAGE AS doom-cache
+FROM $BASE_IMAGE
+
+# Ensure root user
+USER root
+WORKDIR /
+
+# Make sure we don't get prompted
+ARG DEBIAN_FRONTEND="noninteractive"
+ARG TERM="dumb"
 
 # Emacs variables
 ARG EMACS_DEB_URL="https://ppa.launchpadcontent.net/kelleyk/emacs/ubuntu"
@@ -11,102 +22,6 @@ ARG EMACS_DEB_COMP="main"
 ARG EMACS_KEY_FINGERPRINT="0x873503a090750cdaeb0754d93ff0e01eeaafc9cd"
 ARG EMACS_KEY_URL="https://keyserver.ubuntu.com/pks/lookup?op=get&search=$EMACS_KEY_FINGERPRINT"
 ARG EMACS_KEY_FILE="/usr/share/keyrings/emacs-keyring.gpg"
-
-# Doom Emacs variables
-ARG DE_REPO="https://github.com/hlissner/doom-emacs"
-ARG DE_BRANCH="master"
-ARG DE_HASH="07fca786154551f90f36535bfb21f8ca4abd5027"
-ARG DE_EMACS_DIR="/vols/emacs.d"
-ARG DE_DOOM_DIR="/vols/doom.d"
-
-# The goal of this stage is to install Doom and minimal prerequisites. This is
-# done to improve caching, so even if the base image changes, we don't have to
-# do the expensive operation of Doom install, which needs to pull all the
-# extensions from Straight and so on. We can then copy all the installed files
-# to the target base image.
-FROM ubuntu:22.04 AS doom-cache
-
-ARG EMACS_DEB_URL
-ARG EMACS_DEB_DIST
-ARG EMACS_DEB_COMP
-ARG EMACS_KEY_FINGERPRINT
-ARG EMACS_KEY_URL
-ARG EMACS_KEY_FILE
-ARG DE_REPO
-ARG DE_BRANCH
-ARG DE_HASH
-ARG DE_EMACS_DIR
-ARG DE_DOOM_DIR
-
-# Ensure root user
-USER root
-WORKDIR /
-
-# Make sure we don't get prompted
-ARG DEBIAN_FRONTEND="noninteractive"
-ARG TERM="dumb"
-
-# Install necessary prerequisites
-RUN apt-get update \
-    && apt-get install -y \
-        curl \
-        git \
-        gnupg \
-    && rm -rf /var/lib/apt/lists/*
-
-# Add Emacs repo
-RUN curl -fL "$EMACS_KEY_URL" | gpg --dearmor > $EMACS_KEY_FILE \
-    && { \
-        echo "# Emacs Repo (kelleyk)"; \
-        echo "deb [signed-by=$EMACS_KEY_FILE] $EMACS_DEB_URL $EMACS_DEB_DIST $EMACS_DEB_COMP"; \
-        echo "deb-src [signed-by=$EMACS_KEY_FILE] $EMACS_DEB_URL $EMACS_DEB_DIST $EMACS_DEB_COMP"; \
-    } >> /etc/apt/sources.list.d/emacs.list
-
-# Install Emacs 28
-RUN apt-get update \
-    && apt-get install -y \
-        emacs28 \
-    && rm -rf /var/lib/apt/lists/*
-
-# Clone Doom to the Emacs config directory
-RUN git clone --branch $DE_BRANCH --single-branch $DE_REPO $DE_EMACS_DIR \
-    && cd $DE_EMACS_DIR \
-    && git reset --hard $DE_HASH
-
-# Add Doom executables to PATH
-ENV PATH=$DE_EMACS_DIR/bin:$PATH
-
-# Set environment variables used by Doom
-ENV EMACSDIR=$DE_EMACS_DIR
-ENV DOOMDIR=$DE_DOOM_DIR
-
-# Initialize Doom config, enable VTerm, then do Doom install
-RUN mkdir -p $DE_DOOM_DIR \
-    && cp $DE_EMACS_DIR/templates/init.example.el $DE_DOOM_DIR/init.el \
-    && cp $DE_EMACS_DIR/templates/config.example.el $DE_DOOM_DIR/config.el \
-    && cp $DE_EMACS_DIR/templates/packages.example.el $DE_DOOM_DIR/packages.el \
-    && sed "s/;;vterm/vterm/" -i $DE_DOOM_DIR/init.el \
-    && doom install --force --no-config --no-env --fonts
-
-# Now build from the actual base layer
-FROM $BASE_IMAGE as doom
-
-ARG EMACS_DEB_URL
-ARG EMACS_DEB_DIST
-ARG EMACS_DEB_COMP
-ARG EMACS_KEY_FINGERPRINT
-ARG EMACS_KEY_URL
-ARG EMACS_KEY_FILE
-ARG DE_EMACS_DIR
-ARG DE_DOOM_DIR
-
-# Ensure root user
-USER root
-WORKDIR /
-
-# Make sure we don't get prompted
-ARG DEBIAN_FRONTEND="noninteractive"
-ARG TERM="dumb"
 
 # Add Emacs repo
 RUN curl -fL "$EMACS_KEY_URL" | gpg --dearmor > $EMACS_KEY_FILE \
@@ -157,9 +72,16 @@ RUN curl -fL -o $FD_FILE "$FD_URL" \
 USER $DEV_USER
 WORKDIR $DEV_USER_HOME
 
-# Define these for convenience
-ENV EMACS_CONFIG_DIR="$VOLS_DIR/emacs.d"
-ENV DOOM_CONFIG_DIR="$VOLS_DIR/doom.d"
+# Doom Emacs variables
+ARG DE_EMACS_DIR="/vols/emacs.d"
+ARG DE_DOOM_DIR="/vols/doom.d"
+
+# Straight makes heavy use of symlinks with absolute paths for its internal
+# organization. Copying those symlinks will break them, unless the absolute
+# paths stay the same. That is to say, $DE_EMACS_DIR must equal
+# $EMACS_CONFIG_DIR, etc.
+ENV EMACS_CONFIG_DIR="$DE_EMACS_DIR"
+ENV DOOM_CONFIG_DIR="$DE_DOOM_DIR"
 
 # Make blank directories to ensure permissions are set correctly
 RUN sudo mkdir -m 755 $EMACS_CONFIG_DIR $DOOM_CONFIG_DIR \
@@ -169,28 +91,29 @@ RUN sudo mkdir -m 755 $EMACS_CONFIG_DIR $DOOM_CONFIG_DIR \
 RUN ln -s $EMACS_CONFIG_DIR $DEV_USER_HOME/.emacs.d \
     && ln -s $DOOM_CONFIG_DIR $DEV_USER_HOME/.doom.d
 
-# Straight makes heavy use of symlinks with absolute paths for its internal
-# organization. Copying those symlinks will break them, unless the absolute
-# paths stay the same. That is to say, $DE_EMACS_DIR must equal
-# $EMACS_CONFIG_DIR, etc.
-RUN test $DE_EMACS_DIR = $EMACS_CONFIG_DIR -a $DE_DOOM_DIR = $DOOM_CONFIG_DIR || exit 1
-
 # Copy files from the build layer
 COPY --from=doom-cache --chown=$DEV_USER:$DEV_USER $DE_EMACS_DIR $EMACS_CONFIG_DIR
 COPY --from=doom-cache --chown=$DEV_USER:$DEV_USER $DE_DOOM_DIR $DOOM_CONFIG_DIR
 
-# Copy fonts that were installed by Doom :-(
-COPY --from=doom-cache --chown=$DEV_USER:$DEV_USER /root/.local/share/fonts $DEV_USER_HOME/.local/share/fonts
+# Doom font variables
+ARG DE_NERDFONT_URL="https://raw.githubusercontent.com/rainstormstudio/nerd-icons.el/main/fonts/NFM.ttf"
+ARG DE_NERDFONT_FILE="$DEV_USER_HOME/.local/share/fonts/NFM.ttf"
 
 # Update the font cache
-RUN fc-cache -f
+RUN mkdir -p $(dirname $DE_NERDFONT_FILE) \
+    && curl -fL -o $DE_NERDFONT_FILE "$DE_NERDFONT_URL" \
+    && fc-cache -f
 
 # Add Doom executables to PATH
 ENV PATH=$EMACS_CONFIG_DIR/bin:$PATH
 
+# Set environment variables used by Doom
+ENV EMACSDIR=$DE_EMACS_DIR
+ENV DOOMDIR=$DE_DOOM_DIR
+
 # Build the VTerm module. We must locate the exact build directory because it's
 # name depends on the Emacs version, e.g., `build-28.1`, etc.
-RUN VTERM_BUILD_DIR=$(fd -uu -p 'build-[0-9.]+/vterm$' $EMACS_CONFIG_DIR) \
+RUN VTERM_BUILD_DIR=$(fd -uu -p "build-[0-9.]+/vterm$" $EMACS_CONFIG_DIR) \
     && cd $VTERM_BUILD_DIR \
     && cmake -S . -B build \
     && cmake --build build
